--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RESUME</title>
-    <link rel="stylesheet" href="resume.css.css">
+    <link rel="stylesheet" href="CV.css.css">
     
    
 </head>
